# pyproject.toml
[build-system]
requires = ["hatchling>=1.14.0"]
build-backend = "hatchling.build"

[project]
name = "nicecharts"
version = "1.1.1"
description = "Python library for generating fan, line, and pie charts as SVG or PNG."
authors = [
    { name = "Lâm", email = "tvhlam2k13@gmail.com" }
]
license = { text = "Custom License - Permission required for modification and redistribution" }
readme = "README.md"
home-page = "https://github.com/Akaza-12345/nicecharts"
keywords = ["charts", "SVG", "PNG", "fan chart", "line chart", "pie chart"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
dependencies = [
    "Pillow>=10.0.0",
    "cairosvg>=2.6.0"
]